# solvor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  WIKI_SETUP.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/algorithms/continuous/: bfgs.md  powell.md
docs/algorithms/graph/: index.md  shortest-paths.md
docs/algorithms/linear-programming/: solve-lp-interior.md  solve-lp.md
docs/algorithms/metaheuristics/: anneal.md  genetic.md
examples/quick_examples/: bin_pack_example.py  bp_example.py  hungarian_example.py  job_shop_example.py  lbfgs_example.py
solvor/: __init__.py  a_star.py  anneal.py  bayesian.py  bellman_ford.py  bfs.py  bp.py  cg.py  cp.py  cp_encoder.py  dijkstra.py  dlx.py  flow.py  floyd_warshall.py  genetic.py  gradient.py  hungarian.py  interior_point.py  job_shop.py  knapsack.py  milp.py  mst.py  network_simplex.py  sat.py  scc.py  simplex.py  tabu.py  types.py  utils.py  vrp.py
solvor/utils/: __init__.py
src/: __init__.py  anneal.py  bayesian.py  cp.py  flow.py  genetic.py  gradient.py  milp.py  sa.py  sat.py  simplex.py  tabu.py
src/solvor/: __init__.py  anneal.py  bayesian.py  cp.py  flow.py  genetic.py  gradient.py  milp.py  sat.py  simplex.py  tabu.py
tests/: test_anneal.py  test_bayesian.py  test_cp.py  test_dlx.py  test_flow.py  test_genetic.py  test_gradient.py  test_milp.py  test_sat.py  test_simplex.py  test_solvers.py  test_tabu.py  test_utils.py  test_utils_validate.py
tests/solvor/: test_cp.py
tests/solvors/: test_bp.py  test_cg.py  test_cp.py  test_genetic.py  test_milp.py  test_types.py
wiki-content/: Assignment.md  CREATION_SUMMARY.md  Constraint-Programming.md  Continuous-Optimization.md  Cookbook-Assignment.md  Cookbook-Graph-Coloring.md  Cookbook-Knapsack.md  Cookbook-Max-Flow-Network.md  Cookbook-N-Queens.md  Cookbook-Resource-Allocation.md  Cookbook-Shortest-Path-Grid.md  Cookbook-Sudoku.md  Cookbook-TSP.md  Cookbook.md  Exact-Cover.md  Home.md  Linear-&-Integer-Programming.md  Metaheuristics.md  Model-(CP-SAT).md  Network-Flow-&-MST.md  Pathfinding.md  adam.md  anneal.md  astar-&-astar_grid.md  bayesian_opt.md  bellman_ford.md  bfs.md  dfs.md  dijkstra.md  evolve.md  floyd_warshall.md  gradient_descent.md  hungarian.md  kruskal.md  max_flow.md  min_cost_flow.md  momentum.md  network_simplex.md  prim.md  rmsprop.md  (+7 more)
