[project]
name = "solvor"
version = "0.3.0"
description = "Pure Python optimization solvers. No dependencies, no nonsense."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []
authors = [
    { name = "Steven Bytheway" }
]
license = { text = "MIT" }
keywords = ["optimization", "solver", "linear-programming", "sat", "metaheuristics", "operations-research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Repository = "https://github.com/StevenBtw/solvor"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solvor"]

[tool.ruff]
line-length = 100
