[project]
name = "solvor"
version = "0.3.3"
description = "Solvor your optimization needs."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []
authors = [
    { name = "Steven Bytheway" }
]
license = { text = "Apache-2.0" }
keywords = ["optimization", "solver", "linear-programming", "sat", "metaheuristics", "operations-research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Repository = "https://github.com/StevenBtw/solvor"
PyPI = "https://pypi.org/project/solvor" 

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
